@@ -6,9 +6,9 @@ source "http://rubygems.org"
 # Add dependencies to develop your gem here.
 # Include everything needed to run rake, tests, features, etc.
 group :development do
-  gem "bundler", "~> 1.0.0"
-  gem "jeweler", "~> 1.6.4"
-  gem "thor", "~> 0.14.6"
-  gem "json", "~> 1.4.6"
-  gem "mocha", "~> 0.9.9"
+  gem "bundler"
+  gem "jeweler"
+  gem "thor"
+  gem "json"
+  gem "mocha"
 end
